deployment/k8s/base/kafka.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: fastapi-app
spec:
  serviceName: "kafka"
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: zookeeper
          image: bitnami/zookeeper:3.7
          ports:
            - containerPort: 2181
        - name: kafka
          image: bitnami/kafka:3.5
          ports:
            - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: fastapi-app
spec:
  ports:
    - port: 9092
      targetPort: 9092
  selector:
    app: kafka
  clusterIP: None
