deployment/k8s/base/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: fastapi-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: notification_service:latest
        command: [ "python", "-m", "app.main" ]
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: fastapi-app
spec:
  selector:
    app: notification-service
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
