deployment/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-app-ingress
  namespace: fastapi-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: fastapi.local
      http:
        paths:
          - pathType: Prefix
            path: /users(/|$)(.*)
            backend:
              service:
                name: user-service
                port:
                  number: 8001
          - pathType: Prefix
            path: /tasks(/|$)(.*)
            backend:
              service:
                name: task-service
                port:
                  number: 8002
